Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjObjectField.quorum
class Main
    Object v
    Number t
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Number var)
    end
end
